--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #bubble-container {
     width: 100vw;
     height: 100vh;
-    background: url('YourImageURL');
+    background: url('https://images.unsplash.com/photo-1596487162379-fbab6c590a42?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8d2F0ZXIlMjBidWJibGV8ZW58MHx8MHx8fDA%3D');
     position: relative;
     overflow: hidden;
 }
